fix: #178 fix horizontal scroll table (#459)

--- a/packages/elements/src/styles/components/table.scss
+++ b/packages/elements/src/styles/components/table.scss
@@ -4,6 +4,12 @@
     left: 50%;
     transform: translateX(-50%);
   }
+
+  & td {
+    word-break: break-word;
+    min-width: 100px;
+    max-width: 300px;
+  }
 }
 
 .table-responsive {
